# django-restapi

./: manage.py  pyproject.toml
dog/: models.py  serializers.py  urls.py  views.py
dog/migrations/: 0001_initial.py  0002_dog_age.py  0003_dog_favorite_human.py
dog_api_project/: asgi.py  settings.py  urls.py  wsgi.py
