[tool.poetry]
name = "dogs-api"
version = "0.1.0"
description = ""
authors = ["Chanyoon Zhu <zhqianyu@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
